[gd_scene load_steps=6 format=3 uid="uid://crr2fqhcvmv80"]

[ext_resource type="Script" uid="uid://bymtshk0gkxih" path="res://Scripts/special_block.gd" id="1_4fqa5"]
[ext_resource type="Texture2D" uid="uid://cssc22wddrc4e" path="res://Assets/Graphics/sprites/sprites_other.png" id="2_gvbsr"]
[ext_resource type="AudioStream" uid="uid://dyody04ey8rq8" path="res://Assets/Sounds/sfx/effect_break.wav" id="3_ptgk2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gk7p3"]
size = Vector2(60, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3dwm"]
size = Vector2(60, 16)

[node name="special_block_spikes_UP" type="CharacterBody2D" groups=["Persist"]]
z_index = 1
collision_layer = 3
script = ExtResource("1_4fqa5")
is_spikeBlock = true
damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gvbsr")
region_enabled = true
region_rect = Rect2(192, 832, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gk7p3")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_y3dwm")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ptgk2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
rect = Rect2(-2500, -2500, 5000, 5000)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
